--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ The `D3mirt` analysis is based on descriptive multidimensional item response the
 
 The DMIRT analysis use the two-parameter graded response model (GRM; Samejima, 1969) to extract multidimensional equivalents to the discrimination $a$ and difficulty parameters $d$. The former becomes the multidimensional discrimination ($MDISC$) parameter and the latter the multidimensional difficulty ($MDIFF$) parameter.
 
-The $MDIFF$ is interpreted similarly as the difficulty parameter in the unidimensional model, i.e., it describes a multidimensional distance from the origin to the item response function and shows the level of ability that is required for a higher response. Likewise, the $MDISC$ represents the highest level of discrimination an item can achieve, but when located in a multidimensional latent trait space. In addition,  in`D3mirt` the $MDISC$ score is visualized by scaling the length of the vector arrows representing the item response functions.
+The $MDIFF$ is interpreted similarly as the difficulty parameter in the unidimensional model, i.e., it describes a multidimensional distance from the origin to the item response function and shows the level of ability that is required for a higher response. Likewise, the $MDISC$ represents the highest level of discrimination an item can achieve, but when located in a multidimensional latent trait space. In addition,  in`D3mirt` the $MDISC$ score is visualized by scaling the length of the vector arrows representing the item response functions. Note, if polytomous items are used, such as Likert items,  the items in question will be represented by multiple vector arrows (one for each response function) and the $MDIFF$ will, therefore, show the multidimensional range of difficulty for an item as located in a multidimensional latent trait space.
 
 # Overview
 
