--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ library(mirt)
 
 The `D3mirt` analysis is based on descriptive multidimensional item response theory (DMIRT; Reckase2009, 1985; Reckase & McKinley, 1991) and can be used to analyze dichotomous and polytomous items in a multidimensional ability space. In DMIRT analysis, also called within multidimensional modeling, it is assumed that items in a multidimensional ability space can measure single or multiple latent traits (Reckase, 2009, 1985; Reckase & McKinley, 1991). The method is said to be descriptive because the estimates describe item characteristics when more than one latent dimension is used in the analysis. The strength of the method is the possibility to represent item response functions visually with vector arrows located in a three-dimensional space.
 
-The DMIRT analysis use the two-parameter graded response model (GRM; Samejima, 1969) to extract multidimensional equivalents to the discrimination $a$ and difficulty parameters $d$. The former becomes the multidimensional discrimination ($MDISC$) parameter and the latter the multidimensional difficulty ($MDIFF$) parameter.
+The DMIRT approach use two types of item models, dependent on item type. If dichotomous items are used, the analysis is based on the two-parameter logistic model (2-PL). If polytmous items are used, the analysis is based on the two-parameter graded response model (GRM; Samejima, 1969). In both cases, the estimation process consists of extracting two-parameter multidimensional equivalents to the to the discrimination $a$ and difficulty parameters $d$. The former becomes the multidimensional discrimination ($MDISC$) parameter and the latter the multidimensional difficulty ($MDIFF$) parameter.
 
 The $MDIFF$ is interpreted similarly as the difficulty parameter in the unidimensional model, i.e., it describes a multidimensional distance from the origin to the item response function and shows the level of ability that is required for a higher response. Likewise, the $MDISC$ represents the highest level of discrimination an item can achieve, but when located in a multidimensional latent trait space. In addition, in`D3mirt` the $MDISC$ score is visualized by scaling the length of the vector arrows representing the item response functions. Note, if polytomous items are used, such as Likert items, the items in question will be represented by multiple vector arrows (one for each response function) and the $MDIFF$ will, therefore, show the multidimensional range of difficulty for an item as located in a multidimensional latent trait space.
 
@@ -157,7 +157,7 @@ plotD3mirt(g,
 
 An example of how the output can be described could be as follows.
 
-> Figure $X$ indicates the presence of foremost two latent dimensions, one aligned with the x-axis and one approaching the y-axis. The two dimensions, however, have some within-multidimensional tendencies since they are not completely orthogonal. This tendency, is much more prominent for the items W7Q11, W7Q12, W7Q13, and W7Q14, being located at around the $45°$ angle or higher between the x and z-axis. Moreover, the angles of the construct vectors inform us of how these groups of items are associated. In this example, we find Compassion ($x° = 3.91, y° = 86.49, z° = 88.29$) and Conformity ($x° = 61.84, y° = 28.19, z° = 91.19$) with some within-multidimensional tendencies. However, they are both more or less orthogonal to the z-axis. Next, we find Fairness ($x° = 50.13, y° = 78.31, z° = 42.25$) with clear within-multidimensional tendencies with respect to the x and z-axis. Thus, Fairness, in this model, does not seem to be an independent construct.
+> Figure $X$ indicates the presence of foremost two latent dimensions, one aligned with the x-axis and one approaching the y-axis. The two dimensions, however, have some within-multidimensional tendencies since they are not completely orthogonal. This tendency, is much more prominent for the items W7Q11, W7Q12, W7Q13, and W7Q14, being located at around the $45°$ angle or higher between the x and z-axis. Moreover, the angles of the construct vectors inform us of how these groups of items are associated. In this example, we find Compassion ($x° = 3.908, y° = 86.486, z° = 88.293$) and Conformity ($x° = 61.838, y° = 28.192, z° = 91.190$) with some within-multidimensional tendencies. However, both more or less orthogonal to the z-axis. Next, we find Fairness ($x° = 50.128, y° = 78.308, z° = 42.248$) with clear within-multidimensional tendencies with respect to the x and z-axis. Thus, Fairness, in this model, does not seem to be an independent construct.
 
 In this model, item W7Q16 had the most measurement problems of all items in the data. More specifically, the short vector arrows indicate high amounts of model violations. Moreover, the location of the item in the model also indicates that the item is within-multidimensional and that it does not seem to belong to any construct explicitly.
 
@@ -173,11 +173,11 @@ plotD3mirt(g,
            view = c(15, 20, 0.6))
 ```
 
-![Item W7Q16](item.png)
+![anesdata08_09offwaves](item.png)
 
 An example of how the output can be described could be as follows.
 
-> Figure $X$ shows that item W7Q16 is located at $x° = 35.89, y° = 57.47, z° = 76.49$ which indicates that it is within-multidimensional with respect to the x and y-axis and can also be seen to be oriented between the constructs Compassion and Conformity. The discrimination score ($MDISC = .7699, MDIFF_{range} = [3.72, -1.81]$) is the lowest of all discrimination scores for the items in the model. This implies that the item in question does not seem to fit the three-dimensional GRM used in this particular analysis. We should also note that item W7Q15 ($x° = 60.47, y° = 31.52, z° = 100.02, MDISC = .9232,MDIFF_{range} = [4.32, -.97]$) has the second lowest discrimination score. However, the latter item do seem to belong to the Conformity construct when comparing angle orientation in the model.
+> Figure $X$ shows that item W7Q16 is located at $x° = 35.891, y° = 57.473, z° = 76.493$ which indicates that it is within-multidimensional with respect to the x and y-axis and can also be seen to be oriented between the constructs Compassion and Conformity. The discrimination score ($MDISC = .770, MDIFF_{range} = [-4.838, 2.349]$) is the lowest of all discrimination scores for the items in the model. This implies that the item in question does not seem to fit the three-dimensional GRM used in this particular analysis. We should also note that item W7Q15 ($x° = 60.466, y° = 31.516, z° = 100.017, MDISC = .923, MDIFF_{range} = [-4.680, 1.051]$) has the second lowest discrimination score. However, the latter item do seem to belong to the Conformity construct when comparing angle orientation in the model.
 
 ## `D3mirt` Profile Analysis
 
@@ -213,7 +213,7 @@ plotD3mirt(g, hide = TRUE,
            z.lab="Fairness")
 ```
 
-![Gender Profile](profile.png)
+![anesdata08_09offwaves](profile.png)
 
 An example of how the output can be described could be as follows.
 
