README and DDISC

--- a/vignettes/Intro_to_D3mirt.Rmd
+++ b/vignettes/Intro_to_D3mirt.Rmd
@@ -373,14 +373,7 @@ plotD3mirt(g,
 
 An example of how the output can be described could be as follows.
 
-> Figure $X$ indicates the presence of foremost two latent dimensions, one aligned with the x-axis and one approaching the y-axis.
-> The two dimensions, however, have some within-multidimensional tendencies since they are not completely orthogonal.
-> This tendency, is much more prominent for the items W7Q11, W7Q12, W7Q13, and W7Q14, being located at around the $45°$ angle or higher between the x and z-axis.
-> Moreover, the angles of the construct vectors inform us of how these groups of items are associated.
-> In this example, we find Compassion ($x° = 3.908, y° = 86.486, z° = 88.293$) and Conformity ($x° = 61.838, y° = 28.192, z° = 91.190$) with some within-multidimensional tendencies.
-> However, both more or less orthogonal to the z-axis.
-> Next, we find Fairness ($x° = 50.128, y° = 78.308, z° = 42.248$) with clear within-multidimensional tendencies with respect to the x and z-axis.
-> Thus, Fairness, in this model, does not seem to be an independent construct.
+> Figure $X$ shows that item W7Q16 is located at $x° = 35.891, y° = 57.473, z° = 76.493$ which indicates that it is within-multidimensional with respect to the x and y-axis but approaching orthogonal tendencies with respect to the z-axis. In addition, the directional discrimination further under scores that the item does not seem to measure any particular construct ($DDISC_1 = .656, DDISC_2 = .656, DDISC_3 = .617$). The global discrimination score ($MDISC = .770, MDIFF_{range} = [-4.838, 2.349]$) is also the lowest of all discrimination scores in the model. This, combined, implies that the item in question does not seem to fit the three-dimensional GRM used in this analysis. We should also note that item W7Q15 ($MDISC = .923, MDIFF_{range} = [-4.680, 1.051]$) has the second lowest discrimination score. However, the latter item do seem to belong to the Conformity construct when comparing angle orientation in the model ($x° = 60.466, y° = 31.516, z° = 100.017, MDISC = .923, DDISC_1 = .332, DDISC_2 = .912, DDISC_3 = .497$).
 
 ## Other Graphical Options
 
