--- a/README.Rmd
+++ b/README.Rmd
@@ -177,7 +177,7 @@ plotD3mirt(g,
 
 An example of how the output can be described could be as follows.
 
-> Figure $X$ shows that item W7Q16 is located at $x° = 35.891, y° = 57.473, z° = 76.493$ which indicates that it is within-multidimensional with respect to the x and y-axis and can also be seen to be oriented between the constructs Compassion and Conformity. The discrimination score ($MDISC = .770, MDIFF_{range} = [-4.838, 2.349]$) is the lowest of all discrimination scores for the items in the model. This implies that the item in question does not seem to fit the three-dimensional GRM used in this particular analysis. We should also note that item W7Q15 ($x° = 60.466, y° = 31.516, z° = 100.017, MDISC = .923, MDIFF_{range} = [-4.680, 1.051]$) has the second lowest discrimination score. However, the latter item do seem to belong to the Conformity construct when comparing angle orientation in the model.
+> Figure $X$ shows that item W7Q16 is located at $x° = 35.891, y° = 57.473, z° = 76.493$ which indicates that it is within-multidimensional with respect to the x and y-axis but approaching orthogonal tendencies with respect to the z-axis. In addition, the directional discrimination further under scores that the item does not seem to measure any particular construct ($DDISC_1 = .656, DDISC_2 = .656, DDISC_3 = .617$). The global discrimination score ($MDISC = .770, MDIFF_{range} = [-4.838, 2.349]$) is also the lowest of all discrimination scores in the model. This, combined, implies that the item in question does not seem to fit the three-dimensional GRM used in this analysis. We should also note that item W7Q15 ($MDISC = .923, MDIFF_{range} = [-4.680, 1.051]$) has the second lowest discrimination score. However, the latter item do seem to belong to the Conformity construct when comparing angle orientation in the model ($x° = 60.466, y° = 31.516, z° = 100.017, MDISC = .923, DDISC_1 = .332, DDISC_2 = .912, DDISC_3 = .497$).
 
 ## `D3mirt` Profile Analysis
 
