--- a/vignettes/Intro_to_D3mirt.Rmd
+++ b/vignettes/Intro_to_D3mirt.Rmd
@@ -27,13 +27,14 @@ knitr::knit_hooks$set(webgl = hook_webgl)
 # `D3MIRT` Modeling
 
 The `D3mirt` analysis is based on descriptive multidimensional item response theory (DMIRT; Reckase2009, 1985; Reckase & McKinley, 1991) and can be used to analyze dichotomous and polytomous items (see Muraki & Carlson, 1995) in a multidimensional ability space.
+The method is visual and illustrates item characteristics, represented by vector arrows, located in a three-dimensional interactive space.
 
 In DMIRT analysis, also called within multidimensional modeling, it is assumed that items in a multidimensional ability space can measure single or multiple latent traits (Reckase, 2009, 1985; Reckase & McKinley, 1991).
-The methodology is a type of data reduction technique that uses a compensatory type of model (Reckase, 2009), i.e., a model that assumes the existence of a multidimensional trait space forming an interconnected latent ability field.
+The methodology is a type of data reduction technique that uses a compensatory model (Reckase, 2009), i.e., a model that assumes the existence of a multidimensional trait space forming an interconnected latent ability field.
 This means that if one trait level is low, some other trait in the model can compensate to create the same predictive score.
 Probability estimates are therefore based on linear combinations of trait scores in the model.
 
-Moreover, the DMIRT analysis is said to be descriptive because the results describe the extent to which items in a test are unidimensional, i.e., that the items describe one dimension only, or are within-multidimensional, i.e., that the items describe more than one dimension.
+Moreover, the DMIRT analysis is said to be *descriptive* because the results describe the extent to which items in a test are unidimensional, i.e., that the items describe one dimension only, or are within-multidimensional, i.e., that the items describe more than one dimension.
 
 The DMIRT approach uses two types of item models, dependent on item type.
 If dichotomous items are used, the analysis is based on the two-parameter logistic model (2PL).
@@ -41,8 +42,8 @@ If polytomous items are used, the analysis is extended to the two-parameter grad
 In both cases, the estimation process consists of first fitting a compensatory multidimensional two-parameter model so that discrimination and difficulty parameters can be extracted.
 For `D3mirt`, this implies that a compensatory three-dimensional 2PL or GRM must be fitted.
 Next, using these parameters the DMIRT computation finds the direction of the highest possible discrimination slope for each item.
-The direction, in turn, shows what latent trait the item can be said to measure in the multidimensional latent model. 
-The output can be visualized as vector arrows representing item response functions located in a multidimensional space pointing in the direction of the maximum slope. 
+The direction, in turn, shows what latent trait the item can be said to measure in the multidimensional latent model.
+The output can be visualized as vector arrows representing item response functions located in a multidimensional space pointing in the direction of the maximum slope.
 The `D3mirt` can be used to calculate all necessary estimates for this purpose, as well as to plot the results (albeit limited to three dimensions).
 
 The most central estimates, briefly explained below, in DMIRT analysis are the single multidimensional discrimination ($MDISC$) parameter, the multidimensional difficulty ($MDIFF$) parameters, and the directional discrimination ($DDISC$) parameters (Reckase2009, 1985; Reckase & McKinley, 1991).
@@ -93,7 +94,9 @@ $DDISC = \sum_{k = 1}^{m} a_{ik} cos \alpha_{ik}$
 The $DDISC$ describes the level of discrimination for one or more items in the model at the angle set by the direction cosines of choice.
 Note, it is always true that $DDISC ≤ MDISC$.
 
-In the `D3mirt`package the $DDISC$ is computed for all items following the angle orientation given by the *construct vectors*, i.e., user adjusted optional vectors whose angle direction is calculated as the average direction of a set of items in the model.
+In the `D3mirt`package the $DDISC$ is computed for all items following the angle orientation given by the *construct vectors*.
+Constructs, in this context, refer to the assumption that a subset of items can measure a higher-order latent variable.
+In `D3mirt`, constructs are implemented as user adjusted optional vectors whose angle direction is calculated as the average direction of a set of items in the model.
 Item sets are created by the user and can be motivated based on exploratory reasons (e.g., grouping items based on model observations) or theoretical reasons (e.g., personality theory).
 Accordingly, the computation of the $DDISC$ index, following the construct vectors, allows the researcher to compare item discrimination locally under the assumption that these constructs exist.
 
@@ -108,17 +111,17 @@ This since the third axis, the $z$-axis, is freely estimated and because only tw
 
 The package includes the following functions.
 
--   `modid()`: D3mirt Model Identification.
--   `D3mirt()`: 3D DMIRT Model Estimation.
--   `summary()`: Summary Function for `D3mirt()`.
--   `plotD3mirt()`: Graphical Output for `D3mirt()`.
+-   `modid()`: D3mirt Model Identification
+-   `D3mirt()`: 3D DMIRT Model Estimation
+-   `summary()`: Summary Function for `D3mirt()`
+-   `plotD3mirt()`: Graphical Output for `D3mirt()`
 
 In what follows, the `D3mirt` procedure and some of its functions and options will be described using the built-in data set "anes08_09offwaves".
 The data set ($N = 1046, M_{age} = 51.33, SD = 14.56, 57\%$ Female) is a subset from the American National Election Survey (ANES) from the 2008-2009 Panel Study Off Wave Questionnaires, December 2009 (DeBell, et al, 2010; <https://electionstudies.org/data-center/2008-2009-panel-study/>).
 All items measure moral preferences and are positively scored of Likert type, ranging from 1 = *Strongly Disagree* to 6 = *Strongly Agree*.
 Demographic variables include age and gender (male/female).
 
-The sections below are sorted under the following headlines.
+The sections below are sorted under the following headings.
 
 1.  Model Identification
 
@@ -169,7 +172,7 @@ The model identification process is described in more detail below.
 If the model is not known, the factor structure must be explored with exploratory factor analysis (EFA).
 However, because `D3mirt` analysis is based on the 2PL and the GRM, it is recommended to use multidimensional item response theory EFA methods, such as the EFA option in `mirt::mirt` (Chalmers, 2012) with `ìtemtype = 'graded'` or `'2PL'`, so that the EFA is performed with the proper item model.
 Note, the EFA is only used to find model identification items that meet the necessary DMIRT model specification requirements.
-Thus, the EFA model itself is discarded after this step in the procedure.
+The EFA model itself is discarded after this step in the procedure.
 It user can therefore try different types of rotation methods and compare model identification results.
 
 ```{r, message = FALSE, results = 'hide'}
@@ -188,7 +191,7 @@ h <- data.frame(g$rotF)
 
 ### Step 2: Item Selection
 
-The `modid()` takes in the factor solution from the EFA, assigned to a data frame $x$, and outputs an $S3$ object of class `modid` containing lists with data frames of estimates.
+The `modid()` takes in the factor solution from the EFA, assigned to a data frame $h$, and outputs an $S3$ object of class `modid` containing lists with data frames of estimates.
 The most important is the item lists, (denoted `$id`), containing data frames that present suggestions on what items (`item.1`...`item.n`) to use for the model identification.
 The data frames have one column for the loadings from each item on the factor of interest, and one column with absolute sum scores (denoted `ABS`) for each item calculated from the remaining factor loadings in the model.
 Each item list is sorted with the lowest absolute sum score highest up.
@@ -202,7 +205,7 @@ modid(h)
 
 As can be seen, the first item, that will be used to identify the $x$-axis, is found in the first list, `id[[1]]` and `item.1`.
 In this case, the best item for the $x$-axis is item "W7Q3".
-The item that identifies the $y$-axis is found in the next list, `items[[2]]` and `Item.2`.
+The item that identifies the $y$-axis is found in the next list, `id[[2]]` and `Item.2`.
 In this case, the best item for the $y$-axis is item "W7Q20".
 
 Sometimes, however, the model is hard to identify.
@@ -278,11 +281,13 @@ But it does suggest that the methodology *can* be used and the results will be p
 
 ## The `D3mirt()` Function
 
-The `D3mirt()` function takes in a data frame with model parameters from a three-dimensional compensatory model and returns an $S3$ object of class `D3mirt` with lists of $a$ and $d$, $MDISC$, and $MDIFF$ parameters, direction cosines, and degrees for vector angles. If constructs are used, the function also returns construct vector angles and $DDISC$  parameters, one index per construct, for all items. 
+The `D3mirt()` function takes in a data frame with model parameters from a three-dimensional compensatory model and returns an $S3$ object of class `D3mirt` with lists of $a$ and $d$, $MDISC$, and $MDIFF$ parameters, and direction cosines..
+The direction cosines are also reported in spherical coordinates ($\theta, \phi$), in which $\theta$ is the vector projection of the vector arrows in the xz-plane, and $\phi$ is the positive angle between the y-axis and the vectors (the distance $\rho$ has no meaning in the model and is set to $\rho = 1$).
+If constructs are used, the function also returns construct direction cosines, spherical coordinates for the construct vector arrows, and $DDISC$ parameters (one index per construct).
 
 ### Fitting the Compensatory Multidimensional Model
 
-The three-dimensional compensatory model is specified so that all items load on all three factors in the model, and that the factors are constrained to be orthogonal (see examples below).
+The three-dimensional compensatory model is specified so that all items load on all three factors in the model, and that the factors are constrained to be orthogonal (see below).
 The fitting of the model is preferably done with the `mirt::mirt` (Chalmers, 2012) function.
 Please note very carefully regarding the model specification in the example below.
 
@@ -336,18 +341,18 @@ g <- D3mirt(d)
 summary(g) # Show summary of results
 ```
 
-As can be seen, the output from the summary function starts by reporting the number of items and difficulty levels. 
+As can be seen, the output from the summary function starts by reporting the number of items and difficulty levels.
 If constructs were used, the output will also include statements on what items belong to which construct (see example below).
-Next, the factor loadings and the difficulty parameters from the compensatory model are reported followed by all necessary DMIRT estimates. 
-Examples of how DMIRT estimates can be used when reporting results are given below in the item and dimensionality analysis example. 
+Next, the factor loadings and the difficulty parameters from the compensatory model are reported followed by all necessary DMIRT estimates.
+Examples of how DMIRT estimates can be used when reporting results are given below in the item and dimensionality analysis example.
 
 ### Constructs
 
-Constructs are included in the analysis by creating one or more nested lists that indicate what items belong to what construct.
+Constructs can be included in the analysis by creating one or more nested lists that indicate what items belong to what construct.
 From this, the `D3mirt()` function finds the average direction of the subset of items contained in each construct list, by adding and normalizing the direction cosines for the items.
 Note, the length of the vector arrows is arbitrary and can be user adjusted.
 
-The construct vector arrows can contribute to the analysis by (a) visualizing the average direction for a subset set of items, and (b) showing how combinations of items interrelate at group-level.
+The construct vector arrows can contribute to the analysis by (a) visualizing the average direction for a subset set of items, and (b) by showing how combinations of items interrelate at group-level.
 
 ```{r}
 # Call to D3mirt(), including optional nested lists for three constructs
@@ -360,21 +365,21 @@ g <- D3mirt(d, c)
 summary(g)
 ```
 
-Compared to the previous function call to `D3mirt()`, we now see two extra lists: `$construct.angles` with direction cosines and angles for the constructs, and `$ddisc` containing the $DDISC_{1,2,3}$ parameters for the items corresponding to the three constructs (1,2,3) used with *c* in the example above.
+Compared to the previous function call to `D3mirt()`, we now see two extra frames: one frame with direction cosines ($D.Cos X, D.Cos Y, D.Cos Z$) and spherical coordinates ($\theta, \phi$) for the constructs, and one frame with the $DDISC$ estimates, containing the $DDISC_{1,2,3}$ parameters for the items corresponding to the three constructs (1,2,3) (assigned with *c* in the example above).
 
 # 3. Plotting
 
 ## The `plotD3mirt()` Function
 
-The `plotD3mirt` function is based on the `rgl` package (Adler & Murdoch, 2023) for visualization with OpenGL.
-The output consists of a three-dimensional interactive RGL device displaying vector arrows with the latent dimensions running along the orthogonal, centered at zero.
+The `plotD3mirt` function is built on the `rgl` package (Adler & Murdoch, 2023) for visualization with OpenGL.
+The output consists of a three-dimensional interactive RGL device, displaying vector arrows with the latent dimensions running along the orthogonal axes centered at zero.
 If polytomous items are used each item will have multiple arrows, representing the multiple item step response functions, running along the exact same direction in the model.
 In the following two sections, some theory will be given to help interpret the graphical output.
 
 ### Unidimensionality vs. Within-Dimensionality
 
 In DMIRT, the angle of the vector arrows indicates what traits, located along the orthogonal axes, an item can be said to describe (Reckase, 2009, 1985, Reckase & McKinley, 1991).
-For instance, an item located at $0°$ seen from the $x$-axis, and $90°$ as seen from the $y$ and $z$-axis, only describes trait $x$.
+For instance, in Cartesian coordinates, an item located at $0°$ seen from the $x$-axis, and $90°$ as seen from the $y$ and $z$-axis, only describes trait $x$.
 Such an item is unidimensional because its direction vector of maximal discrimination slope lies parallel and on the $x$-axis.
 In contrast, an item located at $45°$ between all three axes in a three-dimensional model describes all three traits in the model equally well.
 Such an item is within-multidimensional with respect to all three latent traits used in the analysis because its direction vector points in the $45°$ direction in the model.
@@ -402,7 +407,9 @@ plotD3mirt(g, view = c(15, 20, 0.6))
 
 An example of how the output can be described could be the following.
 
-> As can be seen, the item vector clustering patterns in Figure X indicate the presence of foremost two latent dimensions, one aligned with the $x$-axis and one approaching the $y$-axis. The two dimensions, however, have some within-multidimensional tendencies since they are not completely orthogonal. This tendency, however, is much more prominent for the items W7Q11, W7Q12, W7Q13, and W7Q14, being located at around the $45°$ angle or higher between the $x$ and $z$-axis.
+> As can be seen, the item vector clustering patterns in Figure X indicate the presence of foremost two latent dimensions, one aligned with the $x$-axis and one approaching the $y$-axis.
+> The two dimensions, however, seem to have some within-multidimensional tendencies since they are not completely orthogonal.
+> This tendency, however, is much more prominent for the items W7Q11, W7Q12, W7Q13, and W7Q14, being located at around $\theta = 45$ or higher between the $x$ and $z$-axis.
 
 To get a better understanding of the interrelation of the dimensions, constructs can be added to asses the average angle when grouping items.
 In this example, items have been grouped exploratory, i.e., based on their observed location in the model.
@@ -422,9 +429,9 @@ plotD3mirt(g,
 
 An example of how the output can be described could be as follows.
 
-> The output in Figure $X$ shows that Compassion ($x° = 3.91, y° = 86.49, z° = 88.29$) and Conformity ($x° = 61.84, y° = 28.19, z° = 91.19$) have some within-multidimensional tendencies.
-> However, they are both more or less orthogonal to the $z$-axis.
-> Next, we find Fairness ($x° = 50.13, y° = 78.31, z° = 42.25$) with clear within-multidimensional tendencies with respect to the $x$-axis.
+> The output in Figure $X$ shows that Compassion ($\theta = 1.710, \phi = 86.486$) and Conformity ($\theta = -2.519,\phi = 28.192$) have some within-multidimensional tendencies.
+> However, they are both more or less orthogonal to the $z$-axis ($\theta = 1.710$ and $\theta = -2.519$ respectively).
+> Next, we find Fairness ($\theta = 49.106, \phi = 78.308$) with clear within-multidimensional tendencies with respect to the $x$-axis.
 > Thus, the output indicates that Compassion and Conformity could be independent constructs but that Fairness seems not to be.
 
 As was mentioned above, the W7Q16 had the most measurement problems of all items in the data.
@@ -445,12 +452,12 @@ plotD3mirt(g,
 
 An example of how the output can be described could be as follows.
 
-> Figure $X$ shows that item W7Q16 is located at $x° = 35.891, y° = 57.473, z° = 76.493$ which indicates that the item is within-multidimensional with respect to the $x$ and $y$-axis but approaching orthogonal tendencies with respect to the $z$-axis.
+> Figure $X$ shows that item W7Q16 is located at $\theta = 16.083, \phi = 57.473$, which indicates that the item is within-multidimensional with respect to the $x$ and $y$-axis but approaching orthogonal tendencies with respect to the $z$-axis.
 > In addition, the directional discrimination further underscores that the item does not seem to measure any particular construct ($DDISC_1 = .656, DDISC_2 = .656, DDISC_3 = .617$).
 > The global discrimination score ($MDISC = .770, MDIFF_{range} = [-4.838, 2.349]$) is also the lowest of all discrimination scores in the model.
 > This, combined, implies that the item in question does not seem to fit the three-dimensional compensatory model used in this analysis.
 > We should also note that item W7Q15 ($MDISC = .923, MDIFF_{range} = [-4.680, 1.051]$) has the second lowest discrimination score.
-> However, the latter item does seem to belong to the Conformity construct when comparing angle orientation ($x° = 60.466, y° = 31.516, z° = 100.017$) and discrimination ($MDISC = .923, DDISC_1 = .332, DDISC_2 = .912, DDISC_3 = .497$).
+> However, the latter item does seem to belong to the Conformity construct when comparing angle orientation ($\theta = -19.436, \phi = 31.516$) and discrimination ($MDISC = .923, DDISC_1 = .332, DDISC_2 = .912, DDISC_3 = .497$).
 
 ### Other Graphical Options
 
@@ -528,8 +535,8 @@ The `plotD3mirt`function uses `as.factor()` to count the number of factor levels
 This means that raw data can be used as is but the number of colors in the color vectors argument (`sphere.col`) may need to be adapted.
 In the example below, the criteria variable for gender only hold two factor levels and therefore only two colors in the color vector are needed.
 
-
 Call `plotD3mirt` with the respondent data frame $z$ in the `profiles` argument and the `levels` argument with the levels column subsetted from $z$.
+
 ```{r, testg8, webgl=TRUE, fig.width = 7, fig.height = 7}
 # Plot profiles with item vector arrows hidden
 # Score levels: 1 = Blue ("male") and 2 = Red ("female")
@@ -554,7 +561,7 @@ More specifically, a color vector for the `sphere.col` argument can be created w
 When plotting, the `plotD3mirt()` function will pick colors from the `sphere.col` argument following the factor order in the `levels` argument.
 This example compares respondents 30 years or younger against 70 years or older.
 
-In the example below, the `nlevels(as.factor(x))` is used to count the number of factor levels in the raw data. 
+In the example below, the `nlevels(as.factor(x))` is used to count the number of factor levels in the raw data.
 The output is then used to create the appropriate color vector for `sphere.col`.
 
 ```{r}
